[tool.poetry]
    name = "tokenizer"
    version = "0.1.0"
    description = ""
    authors = ["Bryce Meyer <bryce13950@gmail.com>"]
    readme = "README.md"
    packages = [{include = "tokenizer"}]

[tool.poetry.dependencies]
    python = "^3.11"
    huggingface-hub = "^0.20.3"


[build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"
